--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,15 @@
-# Prerequisites
-*.d
-
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
-
 # Linker output
-*.ilk
 *.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
+*.def
 
 # Executables
+*.bin
 *.exe
 *.out
-*.app
-*.i*86
-*.x86_64
 *.hex
+*.ihx
 
 # Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
+*.err
+*.lis
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
